# rotulus

./: .gitignore  .pre-commit-config.yaml  README.md  audit_rolls.py  database.py  export_static_data.py  index.html  ocr_pipeline.py  package-lock.json  package.json  parser.py  parser2.py  pyproject.toml  remote_ocr_worker.py  remote_setup.sh  remote_setup_v2.sh  rolls.db  run_pipeline.py  scan_headers.py  server.py  test_easyocr_remote.py  test_find_gaps.py  test_integrity.py  test_llm.py  test_regex.py  test_vlm.py  update_parser.py  vite.config.js
.github/workflows/: deploy.yml
pipeline/: entities_index.py  geo.py  geocoding.py  imaging.py  models.py  orchestrator.py  processor.py  provider.py  validation.py
public/api/: entities.json  locations.json  rolls.csv  rolls.json  travels.json
public/api/rolls/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+1826 more)
public/api/rolls/1/: movements.json  travels.json
public/api/rolls/10/: movements.json  travels.json
reference/: delisle_1866_raw.txt  delisle_entries_raw.json  delisle_index.json  gap_candidates_notes.md  parse_delisle.py
remote_ocr/: pyproject.toml  remote_ocr_worker.py
src/: App.css  App.jsx  RangeSlider.jsx  index.css
(+673 files in other folders)
