[project]
name = "mortuary-rolls"
version = "0.1.0"
description = "A database of mortuary rolls parsed from scanned PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
